# bunny

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
helper/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  ObjReader.cpp  ObjReader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
include/: Shader.hpp  Utils.hpp
opengl-bunny/: glad.c  main.cpp  test-env.cpp  test-openmesh.cpp
opengl-bunny.xcodeproj/: project.pbxproj
opengl-bunny.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
opengl-bunny.xcodeproj/xcuserdata/vtta.xcuserdatad/xcschemes/: xcschememanagement.plist
res/shader/: BunnyPly.shader  BunnyPlyLight.shader  LightingColor.shader  SpinBox.shader  TestTexture2d.shader  basic.shader
src/: CMakeLists.txt  Camera.cpp  IndexBuffer.cpp  PlyModel.cpp  Shader.cpp  Texture.cpp  Utils.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  WindowUserProperty.cpp
src/include/: Camera.hpp  IndexBuffer.hpp  Mesh.hpp  ObjReader.hpp  PlyModel.hpp  Shader.hpp  Utils.hpp  Vertex.hpp  VertexBufferLayout.hpp  WindowUserProperty.hpp
test/: BunnyObj.cpp  BunnyObj.hpp  BunnyPly.cpp  CMakeLists.txt  ClearColor.cpp  ClearColor.hpp  LightingColor.cpp  Scroll.cpp  SpinBox.cpp  Test.cpp  Test.hpp  Tests.hpp  Texture2D.cpp  Texture2D.hpp
test/include/: BunnyPly.hpp  ClearColor.hpp  LightingColor.hpp  Scroll.hpp  SpinBox.hpp  Test.hpp  Tests.hpp  Texture2D.hpp
